--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="menubar">
+  <%= link_to 'List of breweries', breweries_path%>
+  <%= link_to 'List of beers', beers_path %>
+  <%= link_to 'List of ratings', ratings_path %>
+</div>
 <%= yield %>
 
 </body>
