--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,22 @@
 </head>
 <body>
 <div class="menubar">
-  <%= link_to 'List of breweries', breweries_path%>
-  <%= link_to 'List of beers', beers_path %>
-  <%= link_to 'List of ratings', ratings_path %>
+  <%= link_to 'Breweries', breweries_path%>
+  <%= link_to 'Beers', beers_path %>
+  <%= link_to 'Ratings', ratings_path %>
+  <%= link_to 'Clubs', beer_clubs_path %>
+  |
+  <% if current_user %>
+    <%= link_to current_user.username, current_user %>
+    <%= link_to 'Rate a beer', new_rating_path %>
+    <%= link_to 'Join a club', new_membership_path %>
+    <%= link_to 'Signout', signout_path, method: :delete%>
+  <% else %>
+    <%= link_to 'Signin', signin_path%>
+    <%= link_to 'Signup', signup_path%>
+  <% end %>
 </div>
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
