--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Breweries</h1>
+<h1>Listing breweries</h1>
 
 <table>
   <thead>
@@ -10,7 +10,9 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+  <di>
+    Number of breweries: <%= @breweries.count %>
+  </di>
   <tbody>
     <% @breweries.each do |brewery| %>
       <tr>
