--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
 <div class="menubar">
   <%= link_to 'Breweries', breweries_path%>
   <%= link_to 'Beers', beers_path %>
+  <%= link_to 'Styles', styles_path%>
   <%= link_to 'Ratings', ratings_path %>
   <%= link_to 'Clubs', beer_clubs_path %>
+  <%= link_to 'Places', places_path %>
   |
   <% if current_user %>
     <%= link_to current_user.username, current_user %>
