--- a/app/views/beer_clubs/index.html.erb
+++ b/app/views/beer_clubs/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Beer Clubs</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -21,7 +21,7 @@
         <td><%= link_to 'Show', beer_club %></td>
         <% if current_user %>
         <td><%= link_to 'Edit', edit_beer_club_path(beer_club) %></td>
-        <td><%= link_to 'Destroy', beer_club, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', beer_club, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %></td>
         <% end %>
       </tr>
     <% end %>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to('New Beer club', new_beer_club_path) if current_user %>
+<%= link_to('New Beer club', new_beer_club_path, class:'btn btn-primary') if current_user %>
