--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Beers</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -20,7 +20,7 @@
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
         <% if current_user %>
         <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
-        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %></td>
         <% end %>
       </tr>
     <% end %>
