--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,27 +1,26 @@
-<p id="notice"><%= notice %></p>
-<h2>
-  <%= @brewery.name %>
+<h2><%= @brewery.name %>
+  <% if not @brewery.active  %>
+      <span class="label label-info">retired</span>
+  <% end %>
 </h2>
-<div>
-  <i>Established in <%= @brewery.year %></i>
-</div>
-<div>
-  Number of beers <%= @brewery.beers.count %>
-</div>
+
+<p>
+  <em>Established year:</em>
+  <%= @brewery.year %>
+</p>
+<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
+<p>Number of beers <%= @brewery.beers.count%> </p>
 
 <ul>
   <% @brewery.beers.each do |beer| %>
-     <li> <%= link_to beer.name, beer_path %> </li>
+      <li><%= link_to beer.name, beer %></li>
   <% end %>
 </ul>
 
-<div>
-  <% if @brewery.ratings.empty? %>
-      beer has not yet been rated!
-  <% else %>
-      Has <%= pluralize(@brewery.ratings.length, 'rating', 'ratings')%>, average <%= @brewery.average_rating %>
-  <% end %>
-</div>
+<% if @brewery.ratings.empty? %>
+    <p>beers of the brewery have not yet been rated! </p>
+<% else %>
+    <p>Has <%= pluralize(@brewery.ratings.count,'rating') %>, average <%= @brewery.average_rating %> </p>
+<% end %>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
+<%= edit_and_destroy_buttons(@brewery) %>
