--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Memberships</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>User</th>
@@ -19,7 +19,7 @@
         <td><%= link_to 'Show', membership %></td>
         <% if current_user %>
         <td><%= link_to 'Edit', edit_membership_path(membership) %></td>
-        <td><%= link_to 'Destroy', membership, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', membership, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %></td>
         <% end %>
       </tr>
     <% end %>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to('New Membership', new_membership_path) if current_user %>
+<%= link_to('New Membership', new_membership_path, class:'btn btn-primary') if current_user %>
