--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,13 +1,47 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Ratings</h1>
-<di>
+<div>
   Number of ratings: <%= @ratings.count %>
-</di>
-<ul>
-  <% @ratings.each do |rating| %>
-      <li> <%= rating %> <%= link_to rating.user.username, rating.user %></li>
-  <% end %>
-</ul>
+</div>
+<div>
+  <%= render 'list', item: @top_breweries, header:"Top breweries" %>
+</div>
+<div>
+  <%= render 'list', item: @top_beers, header:"Top beers" %>
+</div>
+<div>
+  <%= render 'list', item: @top_raters, header:"Top raters" %>
+</div>
+<div>
+  <%= render 'list', item: @top_styles, header:"Top styles" %>
+</div>
+<div>
+  <%= render 'list', item: @last_ratings, header:"Most recent ratings" %>
+</div>
 
-<%= link_to('New rating', new_rating_path) if current_user %>
+
+
+
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th>Beer</th>
+    <th>Ratings</th>
+    <th colspan="3">Rater</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @ratings.each do |rating| %>
+      <tr>
+        <td><%= rating.beer.name %></td>
+        <td><%= rating.score %></td>
+        <td><%= link_to rating.user.username, rating.user %></td>
+      </tr>
+  <% end %>
+  </tbody>
+
+</table>
+
+<%= link_to('New rating', new_rating_path, class:'btn btn-primary') if current_user %>
