--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,5 @@
 <%# add navigation links to this file %>
-<li><%= link_to 'breweries', breweries_path %></li>
+<li><%= link_to 'breweries', breweries_path(:sortby => 'asc') %></li>
 <li><%= link_to 'beers', beers_path %></li>
 <li><%= link_to 'styles', styles_path %></li>
 <li><%= link_to 'ratings', ratings_path %></li>
