--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,13 +1,24 @@
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Beers</h1>
+<div style="border-style: solid;">
+  beerlist-name: <%= ActionController::Base.new.fragment_exist?( 'beerlist-name' ) %>
+  <br>
+  beerlist-style: <%= ActionController::Base.new.fragment_exist?( 'beerlist-style' ) %>
+  <br>
+  beerlist-brewery: <%= ActionController::Base.new.fragment_exist?( 'beerlist-brewery' ) %>
+  <br>
+  current: <%= "beerlist-#{@order}" %>
+</div>
+<% cache "beerlist-#{@order}", skip_digest: true do %>
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Style</th>
-      <th>Brewery</th>
+      <th><%= link_to 'Name', beers_path(order:"name") %></th>
+      <th><%= link_to 'Style', beers_path(order:"style") %></th>
+      <th><%= link_to 'Brewery', beers_path(order:"brewery") %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,7 +27,7 @@
     <% @beers.each do |beer| %>
       <tr>
         <td><%= link_to beer.name, beer %></td>
-        <td><%= beer.style %></td>
+        <td><%= link_to beer.style, beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
         <% if current_user %>
         <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
@@ -26,6 +37,7 @@
     <% end %>
   </tbody>
 </table>
+<% end %>
 
 <br>
 
