--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,27 +1,26 @@
 <p id="notice"><%= notice %></p>
+<% cache @beer do %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
+    <h2>
+      <%= @beer.name %>
+    </h2>
 
-<p>
-  <strong>Style:</strong>
-  <%= @beer.style %>
-</p>
+    <p>
+      <%= link_to @beer.style, @beer.style %>
+      brewed by
+      <%= link_to @beer.brewery.name, @beer.brewery %>
+    </p>
 
-<p>
-  <strong>Brewery:</strong>
-  <%= link_to @beer.brewery.name, @beer.brewery %>
-</p>
+    <% if @beer.ratings.empty? %>
+        <p>beer has not yet been rated! </p>
+    <% else %>
+        <p>Has <%= pluralize(@beer.ratings.count,'rating') %>, average <%= round(@beer.average_rating) %> </p>
+    <% end %>
 
-<p>
-  <% if @beer.ratings.empty? %>
-      beer has not yet been rated!
-  <% else %>
-      Has <%= pluralize(@beer.ratings.length, 'rating', 'ratings')%>, average <%= @beer.average_rating %>
-  <% end %>
-</p>
+<% end %>
+
+<!- cachaamaton osa >
+
 <% if current_user %>
 
     <h4>give a rating:</h4>
@@ -29,11 +28,11 @@
     <%= form_for(@rating) do |f| %>
         <%= f.hidden_field :beer_id %>
         score: <%= f.number_field :score %>
-        <%= f.submit %>
+        <%= f.submit class:"btn btn-primary"  %>
     <% end %>
 
-    <%= link_to 'Edit', edit_beer_path(@beer) %>
+    <p></p>
 
 <% end %>
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Back', beers_path %>
+
+<%= edit_and_destroy_buttons(@beer) %>
